# x11rb_bar

./: Cargo.toml  OPTIMIZATION_COMPLETE.md  SELECTIVE_REDRAW_COMPLETE.md  measure_performance.sh
src/: main.rs
