[package]
name = "x11rb_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13.2", features = ["all-extensions", "allow-unsafe-code", "dl-libxcb", "extra-traits"] }
anyhow = "1.0.100"
chrono = "0.4.42"
sysinfo = { version = "0.37.1", features = ["multithread"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
libc = "0.2.176"
log = "0.4.28"

xcb = "1.6.0"
